--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -18,8 +18,8 @@ eureka:
     fetch-registry: true
     service-url:
       defaultZone: http://eureka-server:8761/eureka
-  instance:
-    hostname: Income-Expense-Server
+    instance:
+      preferIpAddress: true
 keyStore:
   path: keystore.jks
   password: password
